--- a/bridge-test/pom.xml
+++ b/bridge-test/pom.xml
@@ -24,7 +24,7 @@
     </pluginRepositories>
 
     <properties>
-        <bridge.version>-PLACEHOLDER</bridge.version>
+        <bridge.version>${project.version}</bridge.version>
     </properties>
 
     <dependencies>
@@ -46,14 +46,14 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.2</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>net.ME1312.ASM</groupId>
                 <artifactId>bridge-plugin</artifactId>
-                <version>-PLACEHOLDER</version>
+                <version>${bridge.version}</version>
                 <executions>
                     <execution>
                         <goals>
