--- a/bridge-plugin/pom.xml
+++ b/bridge-plugin/pom.xml
@@ -69,10 +69,10 @@
                             <goal>run</goal>
                         </goals>
                         <configuration>
-                            <tasks>
+                            <target>
                                 <mkdir dir="${project.build.directory}" />
                                 <copy file="${basedir}/../LICENSE" todir="${project.build.directory}/classes" />
-                            </tasks>
+                            </target>
                         </configuration>
                     </execution>
                 </executions>
